--- a/AnimationDemo/app/src/main/AndroidManifest.xml
+++ b/AnimationDemo/app/src/main/AndroidManifest.xml
@@ -1,15 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+          xmlns:tools="http://schemas.android.com/tools"
           package="com.lyc.indonesia.animationdemo">
 
     <application
             android:allowBackup="true"
+            android:appComponentFactory=""
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
-            android:theme="@style/AppTheme">
-        <activity android:name=".basemotionanimtion.SimpleSpringActivity">
+            android:theme="@style/AppTheme"
+            tools:replace="android:appComponentFactory">
+        <activity android:name=".basemotionanimtion.SimpleTextActivity">
+        </activity>
+        <activity android:name=".basemotionanimtion.StringTextSpringActivity">
         </activity>
         <activity android:name=".basemotionanimtion.BaseMotionActivity">
         </activity>
