--- a/CustomizeView/app/src/main/AndroidManifest.xml
+++ b/CustomizeView/app/src/main/AndroidManifest.xml
@@ -9,8 +9,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <uses-library android:name="android.test.runner"
+                      android:required="false" />
+        <!-- For both of these declarations, you don't need to include
+         android:required="false" if your app's minSdkVersion is 28
+         or higher. -->
+        <uses-library android:name="android.test.base"
+                      android:required="false" />
+        <uses-library android:name="android.test.mock"
+                      android:required="false" />
         <activity android:name=".ScrollerLayoutDemoActivity">
         </activity>
+        <activity android:name=".VerticalScrollerLayoutDemoActivity"/>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
