--- a/AnimationDemo/app/src/main/AndroidManifest.xml
+++ b/AnimationDemo/app/src/main/AndroidManifest.xml
@@ -12,6 +12,10 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme"
             tools:replace="android:appComponentFactory">
+        <activity android:name=".layoutanimation.AutoAnimationLayoutUpdateActivity">
+        </activity>
+        <activity android:name=".layoutanimation.LayoutAnimationActivity">
+        </activity>
         <activity android:name=".zoomanimation.ZoomImageViewActivity">
         </activity>
         <activity android:name=".moveanimation.CustomizePathActivity">
