--- a/BackGroundWorkDemo/app/src/main/AndroidManifest.xml
+++ b/BackGroundWorkDemo/app/src/main/AndroidManifest.xml
@@ -10,8 +10,12 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <service
+            android:name=".service.RemoteService"
+            android:enabled="true"
+            android:exported="true"></service>
+        <service
             android:name=".service.MyIntentService"
-            android:exported="false"></service>
+            android:exported="false" />
 
         <activity android:name=".service.IntentServiceActivity" />
 
