--- a/BackGroundWorkDemo/app/src/main/AndroidManifest.xml
+++ b/BackGroundWorkDemo/app/src/main/AndroidManifest.xml
@@ -9,10 +9,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".workmanager.WorkManageActivity"></activity>
+        <activity android:name=".service.JobSchedulerActivity" />
+
         <service
             android:name=".service.RemoteService"
             android:enabled="true"
-            android:exported="true"></service>
+            android:exported="true" />
         <service
             android:name=".service.MyIntentService"
             android:exported="false" />
@@ -40,6 +43,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <service
+            android:name=".service.JobSchedulerService"
+            android:permission="android.permission.BIND_JOB_SERVICE" />
     </application>
 
 </manifest>
