--- a/BackGroundWorkDemo/app/src/main/AndroidManifest.xml
+++ b/BackGroundWorkDemo/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".workmanager.WorkManageActivity"></activity>
+        <activity android:name=".broadcast.BroadcastActivity"></activity>
+        <activity android:name=".workmanager.WorkManageActivity" />
         <activity android:name=".service.JobSchedulerActivity" />
 
         <service
